code si stile header

--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>paragraf nou</p>
-    <p>style </p>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="./style.css" rel="stylesheet" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="header">
+
+            <div class="header__logo">
+                <a href="https://mail.ru" target="_blank">
+                <img src="https://img.imgsmail.ru/static.promo/logo/logo.svg" alt="Logo">
+                </a>                
+            </div>
+
+            <ul class="header__meniu">
+                <li class="header__meniu__item">
+                    <a class="header__meniu__link" href="file:///C:/Users/Nicu/Desktop/LOL/nicu/index.html#home" title="Home page 123123123">
+                        Home
+                    </a>
+                </li>
+                <li class="header__meniu__item">
+                    <a class="header__meniu__link" href="file:///C:/Users/Nicu/Desktop/LOL/nicu/index.html#about-us" title="About us page">
+                        About us
+                    </a>
+                </li>
+                <li class="header__meniu__item">
+                    <a class="header__meniu__link" href="file:///C:/Users/Nicu/Desktop/LOL/nicu/index.html#contacts" title="Contacts page">
+                        Contacts
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+        
+        <div class="content">
+            <div id="home" style="height: 1000px; background-color: brown;">Home page</div>
+            <div id="about-us" style="height: 1000px; background-color: coral;">About us page</div>
+            <div id="contacts" style="height: 1000px; background-color: darkolivegreen;">Contacts page</div>
+        </div>
+    </body>
 </html>
